--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "react": "18.2.0",
-    "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
-    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.13.3",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
-    "react-native-svg": "^13.14.0",
-    "yup": "^1.3.2"
+    "react-native-svg": "^13.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
