--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
+    "add": "^2.0.6",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.3",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
-    "react-native-svg": "^13.14.0"
+    "react-native-svg": "^13.14.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
